[package]
name = "aralez"
version = "0.9.1"
edition = "2021"
description = "Aralez is a triage collector tool."
authors = ["Areg Baghinyan <areg@baghinyan.com>"]
license = "Apache-2.0"
repository = "https://github.com/abaghinyan/aralez"
build = "build.rs"

[dependencies]
ntfs = "0.4"
winapi = { version = "0.3", features = ["fileapi", "handleapi", "winnt"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
indicatif = "0.17"
clap = { version = "4.0", features = ["derive"] }
windows = { version = "0.59", features = ["Win32_System_LibraryLoader", "Win32_System_SystemServices", "Win32_System_Environment", "Win32_System_ProcessStatus", "Win32_Security", "Win32_System_WindowsProgramming", "Win32_System_Console", "Win32_System_Threading", "Win32_System_Memory", "Win32_Storage_FileSystem", "Win32_System_Registry", "Win32_System_Diagnostics_Debug", "Win32_Foundation", "Win32_System_SystemInformation", "Win32_Networking_WinSock", "Win32_NetworkManagement_IpHelper", "Win32_System_Diagnostics_ToolHelp"] }
windows-core = "0.59"
csv = "1.3"
chrono = { version = "0.4", features = ["serde"] }
winreg = { version = "0.52", features = ["transactions"] }
widestring = "1"
hostname = "0.4"
zip = "2"
aes-gcm = "0.10" 
aes = "0.8"
rand = "0.8" 
sha2 = "0.10"
serde_json = "1.0"
md5 = "0.7.0"
regex = "1"
indexmap = { version = "2.5", features = ["serde"] }
globset = "0.4"
glob = "0.3.1"
rayon = "1.10"
filetime = "0.2"
once_cell = "1.20"

[build-dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
zip = "2"
winres = "0.1"

[dependencies.windows-sys]
version = "0.59"
features = [
    "Win32_Security",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
]